--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -22,11 +22,11 @@ header {
             li {
                 list-style-type: none;
             }
+
             a {
                 text-decoration: none;
-                color: variaveis.$cor-primaria;
+                @include mixins.ff-fs-cl(variaveis.$ft-textos, 1rem, variaveis.$cor-primaria);
                 font-weight: 500;
-                font-family: variaveis.$ft-textos;
             }
         }
     }
@@ -40,16 +40,16 @@ header {
 
         .textos-home {
             max-width: 464px;
+
             h1 {
-                font-size: 42px;
-                color: variaveis.$cor-primaria;
+                @include mixins.ff-fs-cl (variaveis.$ft-titulos, 42px, variaveis.$cor-primaria);
                 margin-bottom: 2rem;
-                font-family: variaveis.$ft-titulos;
 
                 span {
                     color: variaveis.$cor-secundaria;
                 }
             }
+
             .btn-main {
                 width: 280px;
                 height: 66px;
@@ -63,6 +63,7 @@ header {
         }
         .img-home{
             max-width: 474px;
+
             img{
                 width: 100%;
             }
