--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,10 @@ header nav ul a {
   color: #0C0421;
   font-weight: 500;
 }
+header nav ul a:hover {
+  transform: scale(1.2);
+  font-weight: 700;
+}
 header #home {
   max-width: 1040px;
   margin: 0 auto;
@@ -59,8 +63,15 @@ header #home .textos-home .btn-main {
   border: none;
   outline: none;
   border-radius: 66px;
-  background: #4E75FF;
+  background: #85A0FF;
   font-size: 1.3rem;
+  transition: 0s background-color;
+}
+header #home .textos-home .btn-main:hover {
+  transition-delay: 1s;
+  transition-property: background-color;
+  background: #4E75FF;
+  color: #FFF;
 }
 header #home .img-home {
   max-width: 474px;
@@ -100,4 +111,56 @@ header #home .img-home img {
 }
 #nosso-espaco .detalhes:nth-child(2) {
   flex-direction: row-reverse;
+}
+
+#servico {
+  background: linear-gradient(180deg, #E8F5C8 0%, #FFFFFF 96.87%);
+  padding: 5rem 0;
+}
+#servico .cards {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  gap: 1.5rem;
+}
+#servico .cards .card {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.7) 0%, rgba(202, 212, 250, 0.3) 100%);
+  padding: 1rem 1.5rem;
+  text-align: center;
+  border: 1px solid #FFF;
+  border-radius: 3rem;
+}
+#servico .cards .card-titulo {
+  font-family: "krona One", sans-serif;
+  font-size: 1.6rem;
+  color: #0C0421;
+}
+#servico .cards .card-texto {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2rem;
+  color: #0C0421;
+}
+
+#desconto {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+#desconto h4 {
+  font-family: "krona One", sans-serif;
+  font-size: 1.6rem;
+  color: #0C0421;
+}
+#desconto p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2rem;
+  color: #0C0421;
+}
+#desconto .input-btn {
+  width: 790px;
+  height: 65px;
+  border: solid 1px #4E75FF;
+  border-radius: 65px;
+  margin: 0 auto;
 }/*# sourceMappingURL=styles.css.map */
