--- a/styles/components/_desconto.scss
+++ b/styles/components/_desconto.scss
@@ -21,5 +21,29 @@
         border: solid 1px variaveis.$cor-secundaria;
         border-radius: 65px;
         margin: 0 auto;
+        display: inline-flex;
+
+        input {
+            @include mixins.ff-fs-cl(variaveis.$ft-textos, 1.2rem, variaveis.$cor-primaria);
+            width: calc( $largura-input * 0.65);
+            border: none;
+            outline: none;
+            margin-left: 2rem;
+        }
+
+        button {
+            @include mixins.ff-fs-cl(variaveis.$ft-textos, 1.2rem, #FFF);
+            width: calc( $largura-input * 0.35);
+            background: variaveis.$cor-terciaria;
+            border-radius: 0 65px 65px 0;
+            border: none;
+            transition: .3s background-color;
+
+            &:hover {
+                background-color: variaveis.$cor-secundaria;
+                color: #FFF
+            }
+
+        }
     }
 }
