--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -27,9 +27,9 @@ header {
                 text-decoration: none;
                 @include mixins.ff-fs-cl(variaveis.$ft-textos, 1rem, variaveis.$cor-primaria);
                 font-weight: 500;
+                transition: .3s  font-weight;
 
                 &:hover {
-                    transform: scale(1.2);
                     font-weight: 700;
                 }
             }
@@ -64,13 +64,10 @@ header {
                 border-radius: 66px;
                 background: variaveis.$cor-terciaria;
                 font-size: 1.3rem;
-                transition: 0s background-color;
+                transition: .3s background-color;
 
                 &:hover{
-                    transition-delay: 1s;
-                    transition-property: background-color;
-                    background: variaveis.$cor-secundaria;
-                    color: #FFF;
+                    background-color: variaveis.$cor-secundaria;
                 }
             }
         }
